Update find_package_handle_standard_args() call
Squelches the following warning:

CMake Warning (dev) at /usr/share/cmake-3.22/Modules/FindPackageHandleStandardArgs.cmake:438 (message):
  The package name passed to `find_package_handle_standard_args` (NAPATECH)
  does not match the name of the calling package (Napatech).  This can lead
  to problems in calling code that expects `find_package` result variables
  (e.g., `_FOUND`) to follow a certain pattern.
Call Stack (most recent call first):
  cmake/FindNapatech.cmake:31 (find_package_handle_standard_args)
  CMakeLists.txt:7 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,19 @@ cmake_minimum_required(VERSION 3.15)
 
 project(Plugin)
 
-include(BroPlugin)
+include(ZeekPlugin)
 
 find_package(Napatech)
 
 if ( NAPATECH_FOUND )
     include_directories(BEFORE ${NAPATECH_INCLUDE_DIR})
-    bro_plugin_begin(Zeek Napatech)
-    bro_plugin_cc(src/Plugin.cc)
-    bro_plugin_cc(src/Napatech.cc)
-    bro_plugin_bif(src/Napatech.bif)
-    bro_plugin_link_library(${NAPATECH_LIBRARY})
-    bro_plugin_dist_files(broctl/Napatech.py)
-    bro_plugin_end()
+    zeek_plugin_begin(Zeek Napatech)
+    zeek_plugin_cc(src/Plugin.cc)
+    zeek_plugin_cc(src/Napatech.cc)
+    zeek_plugin_bif(src/Napatech.bif)
+    zeek_plugin_link_library(${NAPATECH_LIBRARY})
+    zeek_plugin_dist_files(zeekctl/Napatech.py)
+    zeek_plugin_end()
     message(STATUS "Napatech prefix      : ${NAPATECH_ROOT_DIR}")
 else ()
     message(FATAL_ERROR "Napatech library and/or headers not found.")
